* airolib-ng: Fixed a bug where database is created even if parameters are not correct.
* airmon-ng and airdriver-ng: Move them in script/ directory.
* airmon-ng: Bypass interface checks when ps command returns an error. Needed for BusyBox limited ps command.
* easside-ng & wesside-ng: Fixing again "Error Wrote 39 out of 30" error message.

Version 1.0-rc2 (changes from aircrack-ng 1.0-rc1) - Released 22 Jan 2009:
* aircrack-ng: Added SSE2 supports (WPA cracking speed is improved a lot) thanks to nx5.
* aircrack-ng: Fixed detection of the number of CPU (especially with recent CPUs).
* aircrack-ng: Fixed long lasting WPA bugs: cannot find the key with SMP computers,
  wasn't exiting correctly, ...
* aircrack-ng: Fixed usage of a dictionnary with WEP.
* aircrack-ng: Now only display ASCII WEP keys when 100% of the hex key can be converted to ASCII.
* aircrack-ng: You can now specify the number of threads for cracking even if you have a non-SMP computer.
* aircrack-ng: Now output an error message if using -r and it wasn't compiled with sqlite support.
  It was a problem on some ubuntu.
* airdecloak-ng: New tool to remove wep cloaked frames from a pcap file.
  For more details see http://www.aircrack-ng.org/doku.php?id=airdecloak-ng
* airodump-ng: Added kismet csv output support.
* airodump-ng: Fixed power value display (for ath interface with a high number, more than 99).
* airodump-ng: Can work on the new frequencies (allowed by frequency Chaos patch).
* airodump-ng: Now display if the network has QoS enabled.
* aireplay-ng: Fixed crash with too short packets (seen with zd1211).
* aireplay-ng: Fixed STP usage in fragmentation attack.
* aireplay-ng: Fixed bug with deauth attack.
* airtun-ng: Fixed STP conversion.
* airolib-ng: Added sample database in test/ directory.
* tkip-tun: New tool to inject on WPA1 with QoS enabled networks. Full description:
  decrypt packets comming from the AP in a TKIP network, which uses QoS (ieee802.11e).